--- a/src/index.html
+++ b/src/index.html
@@ -1,28 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Devolution LLC | Enterprise Automation Consulting</title>
-  <meta name="description" content="We help ambitious businesses eliminate manual bottlenecks and scale operations through intelligent automation.">
-  
-  <!-- Consolidated all dependencies here -->
+  <meta name="description"
+    content="We help ambitious businesses eliminate manual bottlenecks and scale operations through intelligent automation.">
+
+  <!-- Open Graph meta tags for social media link previews -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://devolution.llc/">
+  <meta property="og:title" content="Devolution LLC | Enterprise Automation Consulting">
+  <meta property="og:description"
+    content="We help ambitious businesses eliminate manual bottlenecks and scale operations through intelligent automation.">
+  <!-- <meta property="og:image" content="https://devolution.llc/public/og-image.svg"> -->
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:url" content="https://devolution.llc/">
+  <meta name="twitter:title" content="Devolution LLC | Enterprise Automation Consulting">
+  <meta name="twitter:description"
+    content="We help ambitious businesses eliminate manual bottlenecks and scale operations through intelligent automation.">
+  <!-- <meta name="twitter:image" content="https://devolution.llc/public/og-image.svg"> -->
+
+  <!-- Favicon -->
+  <!-- <link rel="icon" type="image/svg+xml" href="/public/favicon.svg"> -->
+
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-  
+
   <!-- Added FontAwesome from CDN -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-  
+
   <!-- Vue.js 3 -->
   <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-  
+
   <!-- Styles -->
   <link rel="stylesheet" href="styles/main.css">
 </head>
+
 <body>
   <div id="app"></div>
   <script type="module" src="scripts/main.js"></script>
 </body>
+
 </html>
