--- a/src/index.html
+++ b/src/index.html
@@ -25,18 +25,21 @@
   <!-- <meta name="twitter:image" content="https://devolution.llc/public/og-image.svg"> -->
 
   <!-- Favicon -->
-  <!-- <link rel="icon" type="image/svg+xml" href="/public/favicon.svg"> -->
+  <link rel="icon" type="image/svg+xml" href="public/favicon.svg">
+
+  <!-- Preload logo for faster LCP -->
+  <link rel="preload" href="public/devolution-logo-logo-full-dark-bg.svg" as="image" type="image/svg+xml">
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 
-  <!-- Added FontAwesome from CDN -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer">
 
-  <!-- Vue.js 3 -->
-  <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+  <script src="https://unpkg.com/vue@3/dist/vue.global.prod.js"></script>
 
   <!-- Styles -->
   <link rel="stylesheet" href="styles/main.css">
