--- a/src/index.html
+++ b/src/index.html
@@ -27,30 +27,43 @@
   <!-- Favicon -->
   <link rel="icon" type="image/svg+xml" href="public/favicon.svg">
 
-  <!-- Preload logo for faster LCP -->
-  <link rel="preload" href="public/devolution-logo-logo-full-dark-bg.svg" as="image" type="image/svg+xml">
+  <!-- Preload logo SVG with importance hint for faster LCP -->
+  <link rel="preload" href="public/devolution-logo-logo-full-dark-bg.svg" as="image" type="image/svg+xml" importance="high">
 
-  <!-- Fonts -->
+  <!-- Fonts with swap display to avoid blocking render -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 
+  <!-- FontAwesome - loaded async to not block rendering -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
-    crossorigin="anonymous" referrerpolicy="no-referrer">
+    crossorigin="anonymous" referrerpolicy="no-referrer" media="print" onload="this.media='all'">
+  <noscript><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></noscript>
 
-  <script src="https://unpkg.com/vue@3/dist/vue.global.prod.js"></script>
+  <!-- Vue.js - defer loading to after main content -->
+  <script defer src="https://unpkg.com/vue@3/dist/vue.global.prod.js"></script>
 
   <!-- Styles -->
   <link rel="stylesheet" href="styles/main.css">
 
-  <!-- Google tag (gtag.js) -->
+  <!-- Minimal critical CSS for above-the-fold content to improve FCP -->
+  <style>
+    html { scroll-behavior: smooth; }
+    body { font-family: "Inter", -apple-system, BlinkMacSystemFont, sans-serif; background: #0a0f1a; color: #cbd5e1; }
+    .nav { position: fixed; top: 0; left: 0; right: 0; z-index: 100; background: rgba(13, 21, 38, 0.95); }
+    .nav-inner { display: flex; align-items: center; justify-content: space-between; padding: 1.25rem 1rem; }
+    .hero { min-height: 100vh; display: flex; align-items: center; padding: 8rem 0 4rem; }
+  </style>
+
+  <!-- Google tag (gtag.js) - async and deferred -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-HYT3HPZPEJ"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
-
     gtag('config', 'G-HYT3HPZPEJ');
   </script>
 </head>
