--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,8 @@
   <!-- Fonts with swap display to avoid blocking render -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
+  <noscript><link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet"></noscript>
 
   <!-- FontAwesome - loaded async to not block rendering -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
@@ -46,16 +47,12 @@
   <!-- Vue.js - defer loading to after main content -->
   <script defer src="https://unpkg.com/vue@3/dist/vue.global.prod.js"></script>
 
-  <!-- Styles -->
+  <!-- Styles (minified during build) -->
   <link rel="stylesheet" href="styles/main.css">
 
   <!-- Minimal critical CSS for above-the-fold content to improve FCP -->
   <style>
-    html { scroll-behavior: smooth; }
-    body { font-family: "Inter", -apple-system, BlinkMacSystemFont, sans-serif; background: #0a0f1a; color: #cbd5e1; }
-    .nav { position: fixed; top: 0; left: 0; right: 0; z-index: 100; background: rgba(13, 21, 38, 0.95); }
-    .nav-inner { display: flex; align-items: center; justify-content: space-between; padding: 1.25rem 1rem; }
-    .hero { min-height: 100vh; display: flex; align-items: center; padding: 8rem 0 4rem; }
+    html{scroll-behavior:smooth}body{font-family:Inter,-apple-system,BlinkMacSystemFont,sans-serif;background:#0a0f1a;color:#cbd5e1}.nav{position:fixed;top:0;left:0;right:0;z-index:100;background:rgba(13,21,38,.95)}.hero{min-height:100vh;display:flex;align-items:center;padding:8rem 0 4rem}
   </style>
 
   <!-- Google tag (gtag.js) - async and deferred -->
