--- a/src/index.html
+++ b/src/index.html
@@ -30,10 +30,11 @@
   <!-- Preload logo SVG with importance hint for faster LCP -->
   <link rel="preload" href="public/devolution-logo-logo-full-dark-bg.svg" as="image" type="image/svg+xml" importance="high">
 
-  <!-- Fonts with swap display to avoid blocking render -->
+  <!-- Fonts: async load to prevent render blocking, use system font initially -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
+  <!-- Use font-display=optional for true non-blocking load -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=optional" rel="stylesheet" media="print" onload="this.media='all'">
   <noscript><link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet"></noscript>
 
   <!-- FontAwesome - loaded async to not block rendering -->
@@ -52,7 +53,7 @@
 
   <!-- Minimal critical CSS for above-the-fold content to improve FCP -->
   <style>
-    html{scroll-behavior:smooth}body{font-family:Inter,-apple-system,BlinkMacSystemFont,sans-serif;background:#0a0f1a;color:#cbd5e1}.nav{position:fixed;top:0;left:0;right:0;z-index:100;background:rgba(13,21,38,.95)}.hero{min-height:100vh;display:flex;align-items:center;padding:8rem 0 4rem}
+    html{scroll-behavior:smooth}body{font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,sans-serif;background:#0a0f1a;color:#cbd5e1}.nav{position:fixed;top:0;left:0;right:0;z-index:100;background:rgba(13,21,38,.95)}.hero{min-height:100vh;display:flex;align-items:center;padding:8rem 0 4rem}@font-face{font-family:Inter;font-display:optional;src:url(https://fonts.gstatic.com/s/inter/v13/UcCO3FwrK3iLTeHAPMtMV7hPAuhJQo0.woff2) format("woff2")}
   </style>
 
   <!-- Google tag (gtag.js) - async and deferred -->
