--- a/src/index.html
+++ b/src/index.html
@@ -41,8 +41,9 @@
   <!-- Preload critical SVG logo -->
   <link rel="preload" href="public/devolution-logo-logo-full-dark-bg.svg" as="image" type="image/svg+xml" imagesrcset="public/devolution-logo-logo-full-dark-bg.svg">
 
-  <!-- Fonts: Load Inter font with display=swap for better perceived performance -->
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <!-- Fonts: Load Inter font with display=optional + async pattern for FCP -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=optional" rel="stylesheet" media="print" onload="this.media='all'">
+  <noscript><link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet"></noscript>
 
   <!-- FontAwesome - loaded async to not block rendering -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
@@ -57,8 +58,8 @@
     html{scroll-behavior:smooth;background:#0a0f1a}body{margin:0;padding:0;font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,sans-serif;background:#0a0f1a;color:#cbd5e1;line-height:1.6}.nav{position:fixed;top:0;left:0;right:0;z-index:100;background:rgba(13,21,38,.95);backdrop-filter:blur(12px);border-bottom:1px solid rgba(201,169,98,.15);padding:1.25rem 1rem}.hero{min-height:100vh;display:flex;align-items:center;justify-content:center;padding:8rem 1.5rem 4rem}
   </style>
 
-  <!-- Vue.js - defer loading to after paint with module strategy -->
-  <script defer src="https://unpkg.com/vue@3/dist/vue.global.prod.js"></script>
+  <!-- Vue.js - async loading with deferred initialization -->
+  <script async src="https://unpkg.com/vue@3/dist/vue.global.prod.js"></script>
 
   <!-- Google tag (gtag.js) - async and deferred -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-HYT3HPZPEJ"></script>
