Add Paysera payment verification

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
   <meta name="description"
     content="We help ambitious businesses eliminate manual bottlenecks and scale operations through intelligent automation.">
 
+  <meta name="verify-paysera" content="82dad7ec54dd3d3617de65579fb17b1a">
+
   <!-- Open Graph meta tags for social media link previews -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://devolution.llc/">
